[package]
name = "distance-wr-log-bot"
version = "0.1.0"
authors = ["Brian Bowman <seeker14491@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
# Still using v0.1 because time formatting changed in v0.2
distance-util = { git = "https://github.com/Seeker14491/distance-util.git", tag = "v0.1.0", features = ["serde"] }
env_logger = "0.9"
futures = "0.3"
humantime = "2"
if_chain = "1"
indicatif = "0.17"
itertools = "0.10"
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
steamworks = { git = "https://github.com/Seeker14491/steamworks-rs.git", tag = "v0.0.25" }
tap = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt"] }
tokio-stream = "0.1"
