[package]
name = "distance-wr-log-bot"
version = "0.1.0"
authors = ["Brian Bowman <seeker14491@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
distance-steam-data-client = { git = "https://github.com/Seeker14491/DistanceSteamDataServer.git" }
# Still using v0.1 because time formatting changed in v0.2
distance-util = { git = "https://github.com/Seeker14491/distance-util.git", tag = "v0.1.0", features = ["serde"] }
env_logger = "0.10"
ez-stream = { git = "https://github.com/Seeker14491/ez-stream.git" }
futures = "0.3"
humantime = "2"
if_chain = "1"
indicatif = "0.17"
itertools = "0.10"
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"]}
serde = "1"
serde_derive = "1"
serde_json = "1"
steam-workshop = { git = "https://github.com/Seeker14491/steam-workshop.git" }
tap = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt"] }
tokio-stream = "0.1"
